Rename project from "mlx-dist-setup" to "mlx-dist" in pyproject.toml and uv.lock; update setup.sh to improve virtual environment setup logic.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "mlx-dist-setup"
+name = "mlx-dist"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
